helm/apps/proxmox/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-external
  namespace: default
spec:
  ports:
    - port: 8006
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-external
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.50.101
    ports:
      - port: 8006
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxmox.kds-dev.com`)
      kind: Rule
      services:
        - name: proxmox-external
          port: 8006
          scheme: https
          serversTransport: insecure-nas
  tls: {}
